# vendorval-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS
.github/workflows/: audit.yml  ci-node.yml  ci-python.yml  release-python.yml  spec-drift.yml  type-parity.yml
examples/python/live-smoke/: pyproject.toml
scripts/: check-type-parity.mjs  sync-openapi.mjs
specs/: README.md  openapi.json
