[project]
name = "vendorval-live-smoke"
version = "0.0.0"
description = "Live smoke test for the local Python SDK build."
requires-python = ">=3.11"
dependencies = [
    "vendorval-sdk",
    "python-dotenv>=1.0",
]

[tool.uv.sources]
vendorval-sdk = { path = "../../../packages/python", editable = true }
